examples/malgo/error/ErrorLiteral.mlg
module errorLiteral = {
  main = {
    1; 
    'a';
    "hello";
  } 
}